--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,8 @@
     <color name="mainYellow">#FFD541</color>
     <color name="paleYellow2">#F3E2A7</color>
 
+    <color name="yellowGray">#C8C7BB</color>
+
 
     <color name="paleYellow">#E6DBB5</color>
     <color name="tools_backgroundTint">#701717</color>
