--- a/app/src/main/res/layout/fragment_detail_cargo.xml
+++ b/app/src/main/res/layout/fragment_detail_cargo.xml
@@ -9,86 +9,126 @@
         android:layout_height="match_parent">
 
         <RelativeLayout
-            android:paddingBottom="@dimen/padding_all"
-            android:paddingEnd="@dimen/padding_all"
-            android:paddingStart="@dimen/padding_all"
-            android:clipToPadding="false"
-            android:clipChildren="false"
+
             tools:background="@color/mainBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
 
-            <include
-                android:id="@+id/mainToolbar"
-                layout="@layout/toolbar_main_top"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/mainToolbar"
-                android:layout_toStartOf="@+id/filterImg" />
-
-            <include
-                android:id="@+id/filterImg"
-                layout="@layout/img_filter"/>
-
-            <include
-                android:id="@+id/mainToolbar2"
-                layout="@layout/toolbar_customer_top"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/mainToolbar"
-                android:layout_below="@id/mainToolbar"
-                android:layout_marginTop="@dimen/marginTop5ForLayouts" />
-
-            <include
-                android:id="@+id/receiveItem"
-                layout="@layout/pattern_receiving_detail_header"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/mainToolbar2"
-                android:layout_marginTop="@dimen/marginTopRelInfoTv" />
-
             <RelativeLayout
-                android:id="@+id/rel1"
+                android:paddingBottom="@dimen/padding_all"
+                android:paddingEnd="@dimen/padding_all"
+                android:paddingStart="@dimen/padding_all"
+                android:clipToPadding="false"
+                android:clipChildren="false"
+                android:id="@+id/relHeader"
+                android:backgroundTint="@color/mainBackground"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/receiveItem" >
-
-                <View
-                    android:id="@+id/view1"
-                    android:layout_width="@dimen/view_start_width"
-                    android:layout_height="@dimen/view_height1"
-                    android:layout_centerVertical="true"
-                    android:background="@color/gray70" />
-
-                <TextView
-                    android:id="@+id/itemTitle"
+                android:layout_height="wrap_content">
+                <include
+                    android:id="@+id/mainToolbar"
+                    layout="@layout/toolbar_main_top"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_start_icon_tv"
-                    android:layout_marginTop="@dimen/margin_start_icon_tv"
-                    android:layout_marginEnd="@dimen/margin_start_icon_tv"
-                    android:layout_marginBottom="@dimen/margin_start_icon_tv"
-                    android:layout_toEndOf="@+id/view1"
-                    android:fontFamily="@font/medium"
-                    android:text="@string/items"
-                    android:textSize="@dimen/itemDetailReceive" />
+                    android:layout_height="@dimen/mainToolbar"
+                    android:layout_toStartOf="@+id/filterImg" />
+
+                <include
+                    android:id="@+id/filterImg"
+                    layout="@layout/img_filter"/>
+
+                <RelativeLayout
+                    android:id="@+id/rel2"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/mainToolbar"
+                    android:layout_below="@id/mainToolbar"
+                    android:layout_marginTop="@dimen/marginTop5ForLayouts"
+                    android:visibility="gone"
+                    tools:visibility="visible"
+                    style="@style/relSearchMainEdi">
+
+                    <ImageView
+                        android:id="@+id/searchIcon"
+                        android:layout_width="@dimen/searchImg"
+                        android:layout_height="@dimen/searchImg"
+                        android:padding="@dimen/searchImgPadding"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/png_search" />
+
+                    <EditText
+                        android:id="@+id/searchEdi"
+                        style="@style/searchMainEdi"
+                        android:hint="@string/customerName"
+                        android:layout_toStartOf="@+id/clearImg"
+                        android:layout_toEndOf="@+id/searchIcon" />
+
+                    <ImageView
+                        android:id="@+id/clearImg"
+                        style="@style/imgClose" />
+                </RelativeLayout>
 
 
-                <View
-                    android:id="@+id/view2"
+
+                <include
+                    android:id="@+id/receiveItem"
+                    layout="@layout/pattern_receiving_detail_header"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/view_height1"
-                    android:layout_centerVertical="true"
-                    android:layout_toEndOf="@+id/itemTitle"
-                    android:background="@color/gray70" />
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/rel2"
+                    android:layout_marginTop="@dimen/marginTopRelInfoTv" />
+                <RelativeLayout
+                    android:id="@+id/rel1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/receiveItem" >
 
+                    <View
+                        android:id="@+id/view1"
+                        android:layout_width="@dimen/view_start_width"
+                        android:layout_height="@dimen/view_height1"
+                        android:layout_centerVertical="true"
+                        android:background="@color/gray70" />
+
+                    <TextView
+                        android:id="@+id/itemTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/margin_start_icon_tv"
+                        android:layout_marginTop="@dimen/margin_start_icon_tv"
+                        android:layout_marginEnd="@dimen/margin_start_icon_tv"
+                        android:layout_marginBottom="@dimen/margin_start_icon_tv"
+                        android:layout_toEndOf="@+id/view1"
+                        android:fontFamily="@font/medium"
+                        android:text="@string/items"
+                        android:textSize="@dimen/itemDetailReceive" />
+
+
+                    <View
+                        android:id="@+id/view2"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/view_height1"
+                        android:layout_centerVertical="true"
+                        android:layout_toEndOf="@+id/itemTitle"
+                        android:background="@color/gray70" />
+
+
+                </RelativeLayout>
 
             </RelativeLayout>
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@id/rel1"
+                android:paddingBottom="@dimen/padding_all"
+                android:paddingEnd="@dimen/padding_all"
+                android:paddingStart="@dimen/padding_all"
+                android:clipToPadding="false"
+                android:clipChildren="false"
+                android:layout_below="@id/relHeader"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/pattern_cargo_detail" />
 
